[package]
name = "parity"
version = "0.1.0"
authors = ["Collin Richards"]
edition = "2021"
description = "Provides is_even and is_odd methods for primitive numeric types"
repository = "https://github.com/richardscollin/parity"
license = "CC0-1.0"
keywords = ["even", "odd", "parity"]
categories = ["mathematics"]
